src/test/ui/suggestions/impl-trait-return-trailing-semicolon.stderr
error[E0277]: the trait bound `(): Bar` is not satisfied
  --> $DIR/impl-trait-return-trailing-semicolon.rs:3:13
   |
LL | fn foo() -> impl Bar {
   |             ^^^^^^^^ the trait `Bar` is not implemented for `()`
LL |     5;
   |      - consider removing this semicolon

error[E0277]: the trait bound `(): Bar` is not satisfied
  --> $DIR/impl-trait-return-trailing-semicolon.rs:3:22
   |
LL |   fn foo() -> impl Bar {
   |  ______________________^
LL | |     5;
LL | |
LL | | }
   | |_^ the trait `Bar` is not implemented for `()`
   |
   = help: the trait `Bar` is implemented for `u8`

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0277`.
